2007-01-04  Per Bothner  <per@bothner.com>

	* URIPath.java: Do "encoding" when converting String -> URI.
	(URIStringPath): New class.
	(valueOf(String)): Use it.
	(toString): Just use toURIString.
	(encodeForUri): New method, guts moved from StringUtils.
	Add untested support for surrogate characters.

2007-01-03  Per Bothner  <per@bothner.com>

	* Path.java (setCurrentPath): New static field.

	* Path.java (getCanonical): New method.
	* URIPath.java (getCanonical): New method.
	* FilePath.java (getCanonical): New method.

2007-01-02  Per Bothner  <per@bothner.com>

	* Path.java  (getScheme, getPath): New abstract methods.
	(getAuthority, getUserInfo, getAbsolute): New default methods.
	* FilePath.jav (getPath): New method.
	(getScheme): Only return "file" is isAbsolute().
	* URIPath.java (getAuthority, getUserInfo, getPath): New methods.

	* LineBufferedReader.java (name): Rename and change field type to ...
	(path): new field.
	(getPath, setPath): New methods.
	(getName, setName): Update
	(getURI): Remove method.

	* LineBufferedReader.java (readLine): Fix 3 little errors.

	* URIPath.jva: Fix bad indenttain of PreProcess directive.

2007-01-01  Per Bothner  <per@bothner.com>

	* Path.java: Fix typo.

2006-12-30  Per Bothner  <per@bothner.com>

	* Path.java (coerceToPathOrNull): New static method.
	(valueOf): Implement using coerceToPathOrNull.
	* FilePath.java (coerceToFilePathOrNull): New static method.
	(makeFilePath): Implement using coerceToFilePathOrNull.
	* URIPath.java (coerceToURIPathOrNull): New static method.
	(makeURI): Implement using coerceToURIPathOrNull.

2006-12-29  Per Bothner  <per@bothner.com>

	* URI_utils.java: Update for move of uriSchemeSpecified and
	uriSchemeLength from InPort to Path.
	* URIPath.java: Likewise.

	* Path.java: New class.
	* FilePath.java: New class, extends Path.
	* URIPath.java: New class, extends Path.
	* URLPath.java: New class, extends URIPath.
	* ResourceStreamHandler.java: New class, extends URLStreamHandler.