@@ -1,5 +1,12 @@
 2007-01-04  Per Bothner  <per@bothner.com>
 
+	* FilePath.java (path): New field.
+	(<init>): New and updated constructor.
+	(valueOf): Update to set path.
+	(isDirectory): New method.
+	(toString): Return path.
+	(resolve): Check if isDirectory.
+
 	* URIPath.java: Do "encoding" when converting String -> URI.
 	(URIStringPath): New class.
 	(valueOf(String)): Use it.
